# server/app/Http/Controllers/Api/CollectorApiController.php
@@ -136,6 +136,7 @@ final class CollectorApiController extends ApiController
             'collectorIdentifier' => 'required|alpha_num|between:1,255',
             'firstName' => 'required|alpha|between:1,255',
             'lastName' => 'required|alpha|between:1,255',
+            'phoneNumber' => 'nullable|alpha_num|between:9,12'
         ]);
         //Sprawdzenie czy wolontariusza nie ma już w bazie (po ID)
         $collectorExists = Collector::where('identifier', '=', $request->input('collectorIdentifier'))->exists();
@@ -151,6 +152,7 @@ final class CollectorApiController extends ApiController
         $collector->identifier = $request->input('collectorIdentifier');
         $collector->firstName = $request->input('firstName');
         $collector->lastName = $request->input('lastName');
+        $collector->phoneNumber = $request->input('phoneNumber');
         $collector->save();
 
         Log::info(Auth::user()->name . " dodał/a wolontariusza: " . $collector->firstName . " " . $collector->lastName . " ("
