# server/storage/api-docs/api-docs.json
@@ -21,9 +21,7 @@
     "paths": {
         "/stations": {
             "get": {
-                "tags": [
-                    "Stations"
-                ],
+                "tags": ["Stations"],
                 "summary": "Get list of Sttions",
                 "description": "Returns list of Stations",
                 "operationId": "getStationsList",
@@ -49,9 +47,7 @@
         },
         "/stations/{id}/ready": {
             "post": {
-                "tags": [
-                    "Stations"
-                ],
+                "tags": ["Stations"],
                 "summary": "Set Station status to ready",
                 "description": "Set Station status to ready",
                 "operationId": "reayStation",
@@ -89,9 +85,7 @@
         },
         "/stations/{id}/busy": {
             "post": {
-                "tags": [
-                    "Stations"
-                ],
+                "tags": ["Stations"],
                 "summary": "Set Station status to busy",
                 "description": "Set Station status to busy",
                 "operationId": "busyStation",
@@ -129,9 +123,7 @@
         },
         "/stations/{id}/unknown": {
             "post": {
-                "tags": [
-                    "Stations"
-                ],
+                "tags": ["Stations"],
                 "summary": "Set Station status to unknown",
                 "description": "Set Station status to unknown",
                 "operationId": "unknownStation",
@@ -169,9 +161,7 @@
         },
         "/stations/status": {
             "get": {
-                "tags": [
-                    "Stations"
-                ],
+                "tags": ["Stations"],
                 "summary": "Get list of Sttions statuses",
                 "description": "Returns list of Stations statuses",
                 "operationId": "getStationsStatusesList",
@@ -216,9 +206,7 @@
         },
         "/charityBoxes": {
             "get": {
-                "tags": [
-                    "CharityBoxes"
-                ],
+                "tags": ["CharityBoxes"],
                 "summary": "Get list of charity boxes",
                 "description": "Returns list of charity boxes",
                 "operationId": "getCharityBoxList",
@@ -242,9 +230,7 @@
                 }
             },
             "post": {
-                "tags": [
-                    "CharityBoxes"
-                ],
+                "tags": ["CharityBoxes"],
                 "summary": "Create charity box for volunteer (collector)",
                 "description": "Returns information about realse charity box for volunteer (collector)",
                 "operationId": "createCharityBox",
@@ -286,9 +272,7 @@
         },
         "/charityBoxes/{id}": {
             "get": {
-                "tags": [
-                    "CharityBoxes"
-                ],
+                "tags": ["CharityBoxes"],
                 "summary": "Get charity box information",
                 "description": "Returns chrity box data",
                 "operationId": "getCharityBoxById",
@@ -329,9 +313,7 @@
                 }
             },
             "put": {
-                "tags": [
-                    "CharityBoxes"
-                ],
+                "tags": ["CharityBoxes"],
                 "summary": "Update charity box",
                 "description": "Returns information about modified charity box",
                 "operationId": "updateCharityBox",
@@ -385,9 +367,7 @@
         },
         "/charityBoxes/unverified": {
             "get": {
-                "tags": [
-                    "CharityBoxes"
-                ],
+                "tags": ["CharityBoxes"],
                 "summary": "Get list of unverified charity boxes",
                 "description": "Returns list of charity boxes",
                 "operationId": "getUnverifiedList",
@@ -413,9 +393,7 @@
         },
         "/charityBoxes/verified": {
             "get": {
-                "tags": [
-                    "CharityBoxes"
-                ],
+                "tags": ["CharityBoxes"],
                 "summary": "Get list of verified charity boxes",
                 "description": "Returns list of charity boxes",
                 "operationId": "getVerifiedList",
@@ -441,9 +419,7 @@
         },
         "/charityBoxes/verified/{id}": {
             "post": {
-                "tags": [
-                    "CharityBoxes"
-                ],
+                "tags": ["CharityBoxes"],
                 "summary": "Verify Charity Box",
                 "description": "Return message of operation result",
                 "operationId": "postVerifyCharityBoxById",
@@ -495,9 +471,7 @@
         },
         "/charityBoxes/unverified/{id}": {
             "post": {
-                "tags": [
-                    "CharityBoxes"
-                ],
+                "tags": ["CharityBoxes"],
                 "summary": "Unverify Charity Box",
                 "description": "Return message of operation result",
                 "operationId": "postUnverifyCharityBoxById",
@@ -549,9 +523,7 @@
         },
         "/charityBoxes/{id}/startCounting": {
             "post": {
-                "tags": [
-                    "CharityBoxes"
-                ],
+                "tags": ["CharityBoxes"],
                 "summary": "Start counting Charity Box",
                 "description": "Return charity box instance",
                 "operationId": "stratCountngCharityBoxById",
@@ -595,9 +567,7 @@
         },
         "/charityBoxes/{id}/finishCounting": {
             "post": {
-                "tags": [
-                    "CharityBoxes"
-                ],
+                "tags": ["CharityBoxes"],
                 "summary": "Finish counting Charity Box",
                 "description": "Return charity box instance",
                 "operationId": "finishCountngCharityBoxById",
@@ -641,9 +611,7 @@
         },
         "/collectors": {
             "get": {
-                "tags": [
-                    "Collectors"
-                ],
+                "tags": ["Collectors"],
                 "summary": "Get list of Collectors",
                 "description": "Returns list of Collectors",
                 "operationId": "getCollectorList",
@@ -667,9 +635,7 @@
                 }
             },
             "post": {
-                "tags": [
-                    "Collectors"
-                ],
+                "tags": ["Collectors"],
                 "summary": "Insert a new Collector",
                 "description": "Insert a new Collector",
                 "operationId": "postCollector",
@@ -729,9 +695,7 @@
         },
         "/collectors/{id}": {
             "get": {
-                "tags": [
-                    "Collectors"
-                ],
+                "tags": ["Collectors"],
                 "summary": "Get collector information",
                 "description": "Returns collector data",
                 "operationId": "getCollectorById",
@@ -769,9 +733,7 @@
         },
         "/collectors/{collectorIdentifier}/box/create": {
             "post": {
-                "tags": [
-                    "Collectors"
-                ],
+                "tags": ["Collectors"],
                 "summary": "Create Charity Box for Collector",
                 "description": "Create Charity Box for Collector",
                 "operationId": "giveCollectorBox",
@@ -812,9 +774,7 @@
         },
         "/collectors/{collectorIdentifier}/box/latestUncounted": {
             "get": {
-                "tags": [
-                    "Collectors"
-                ],
+                "tags": ["Collectors"],
                 "summary": "Get last uncounted Collector's Charity Box",
                 "description": "Get last uncounted Collector's Charity Box",
                 "operationId": "getCollectorUncountedBox",
@@ -855,9 +815,7 @@
         },
         "/charityBoxes/count/collected": {
             "get": {
-                "tags": [
-                    "CharityBoxScore"
-                ],
+                "tags": ["CharityBoxScore"],
                 "summary": "Get bucket of collected money",
                 "description": "Return bucket of collecteed money each sum in oryginal currency",
                 "operationId": "getCollectedCharityBox",
@@ -911,9 +869,7 @@
         },
         "/charityBoxes/count/collected/sum": {
             "get": {
-                "tags": [
-                    "CharityBoxScore"
-                ],
+                "tags": ["CharityBoxScore"],
                 "summary": "Get sum of collected money in default currency",
                 "description": "Return sum of collected money in default currency",
                 "operationId": "getSumOfCollectedCharityBox",
@@ -951,9 +907,7 @@
         },
         "/charityBoxes/count/collected/{currency}": {
             "get": {
-                "tags": [
-                    "CharityBoxScore"
-                ],
+                "tags": ["CharityBoxScore"],
                 "summary": "Get amount of money collected in specify currency",
                 "description": "Return amount of money collected in specify currency",
                 "operationId": "getCollectedCharityBoxByCurrency",
@@ -1003,9 +957,7 @@
         },
         "/charityBoxes/count/confirmed": {
             "get": {
-                "tags": [
-                    "CharityBoxScore"
-                ],
+                "tags": ["CharityBoxScore"],
                 "summary": "Get sum of collected money",
                 "operationId": "getConfirmedCharityBoxSum",
                 "responses": {
@@ -1058,9 +1010,7 @@
         },
         "/charityBoxes/count/confirmed/sum": {
             "get": {
-                "tags": [
-                    "CharityBoxScore"
-                ],
+                "tags": ["CharityBoxScore"],
                 "summary": "Get sum of confirmed money in default currency",
                 "description": "Return sum of confirmed money in default currency",
                 "operationId": "getSumOfConfirmedCharityBox",
@@ -1098,9 +1048,7 @@
         },
         "/charityBoxes/count/confirmed/{currency}": {
             "get": {
-                "tags": [
-                    "CharityBoxScore"
-                ],
+                "tags": ["CharityBoxScore"],
                 "summary": "Get amount of money in specified currency",
                 "description": "Return amount of money in specified currency",
                 "operationId": "getConfirmedCharityBoxSumByCurrency",
@@ -1149,9 +1097,7 @@
         },
         "/logs": {
             "get": {
-                "tags": [
-                    "BoxEvent"
-                ],
+                "tags": ["BoxEvent"],
                 "summary": "Get list of box events - logs",
                 "description": "Returns list of Logs",
                 "operationId": "getBoxEventsList",
@@ -1177,9 +1123,7 @@
         },
         "/logs/box/{id}": {
             "get": {
-                "tags": [
-                    "BoxEvent"
-                ],
+                "tags": ["BoxEvent"],
                 "summary": "Get charity box events - logs",
                 "description": "Returns charity box Logs",
                 "operationId": "getBoxEventsByBox",
@@ -1217,9 +1161,7 @@
         },
         "/currency/rates": {
             "get": {
-                "tags": [
-                    "Rates"
-                ],
+                "tags": ["Rates"],
                 "summary": "Get list of currencies rate",
                 "description": "Return daily list of currency rate from NBP",
                 "operationId": "getCurrencyRatesList",
@@ -1281,9 +1223,7 @@
         },
         "/currency/rates/{currency}": {
             "get": {
-                "tags": [
-                    "Rates"
-                ],
+                "tags": ["Rates"],
                 "summary": "Get currency rate",
                 "description": "Return daily currency rate from NBP",
                 "operationId": "getCurrencyRate",
@@ -1333,9 +1273,7 @@
         },
         "/users": {
             "get": {
-                "tags": [
-                    "Users"
-                ],
+                "tags": ["Users"],
                 "summary": "Get list of Users",
                 "description": "Returns list of Users",
                 "operationId": "getUsersList",
@@ -1359,9 +1297,7 @@
                 }
             },
             "post": {
-                "tags": [
-                    "Users"
-                ],
+                "tags": ["Users"],
                 "summary": "Insert a new User",
                 "description": "Insert a new User",
                 "operationId": "postUser",
@@ -1401,9 +1337,7 @@
         },
         "/users/{id}": {
             "get": {
-                "tags": [
-                    "Users"
-                ],
+                "tags": ["Users"],
                 "summary": "Get user information",
                 "description": "Returns user data",
                 "operationId": "getUserById",
@@ -1497,11 +1431,7 @@
             "CollectorRequest": {
                 "title": "CollectorRequest",
                 "description": "new Collector schema",
-                "required": [
-                    "collectorIdentifier",
-                    "firstName",
-                    "lastName"
-                ],
+                "required": ["collectorIdentifier", "firstName", "lastName"],
                 "properties": {
                     "collectorIdentifier": {
                         "description": "Id of the collector identifier",
@@ -1517,6 +1447,11 @@
                         "description": "Wolunteer last name",
                         "type": "string",
                         "example": "Kowalski"
+                    },
+                    "phoneNumber": {
+                        "description": "Wolunteer phone number",
+                        "type": "string",
+                        "example": "123456789"
                     }
                 },
                 "type": "object"
@@ -1524,11 +1459,7 @@
             "UserRequest": {
                 "title": "UserRequest",
                 "description": "new User schema",
-                "required": [
-                    "userName",
-                    "password",
-                    "role"
-                ],
+                "required": ["userName", "password", "role"],
                 "properties": {
                     "userName": {
                         "description": "User name",
@@ -1548,11 +1479,7 @@
                     "role": {
                         "description": "User role",
                         "format": "string",
-                        "enum": [
-                            "volounteer",
-                            "admin",
-                            "superadmin"
-                        ],
+                        "enum": ["volounteer", "admin", "superadmin"],
                         "example": "volounteer"
                     }
                 },
@@ -1862,6 +1789,12 @@
                         "description": "Volunteer's last name",
                         "type": "string",
                         "example": "Kowalski"
+                    },
+                    "phone_number": {
+                        "title": "Phone Number",
+                        "description": "Volunteer's phone number",
+                        "type": "string",
+                        "example": "123456789"
                     }
                 },
                 "type": "object"
@@ -1894,11 +1827,7 @@
                         "title": "Name",
                         "description": "User Role name",
                         "type": "string",
-                        "enum": [
-                            "volounteer",
-                            "admin",
-                            "superadmin"
-                        ],
+                        "enum": ["volounteer", "admin", "superadmin"],
                         "example": "volunteer"
                     },
                     "description": {
@@ -1989,9 +1918,7 @@
             "BoxCharityBoxRequest": {
                 "title": "Charity Box request",
                 "description": "Charity Box request body data",
-                "required": [
-                    "box_id"
-                ],
+                "required": ["box_id"],
                 "properties": {
                     "box_id": {
                         "title": "box_id",
@@ -2006,9 +1933,7 @@
             "CollectorCharityBoxRequest": {
                 "title": "",
                 "description": "",
-                "required": [
-                    "collector_identifier"
-                ],
+                "required": ["collector_identifier"],
                 "properties": {
                     "collector_identifier": {
                         "title": "collector_identifier",
